--- a/src/app/components/status/status.component.html
+++ b/src/app/components/status/status.component.html
@@ -1,3 +1,7 @@
-<p>
-  status works!
-</p>
+<div class="row">
+  <div class="col-md-4">
+    <h1>User Status</h1>
+    <hr><br>
+    <p>Logged In? {{isLoggedIn}}</p>
+  </div>
+</div>
