--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -4,6 +4,10 @@
     <hr><br>
     <form (ngSubmit)="onRegister()" novalidate>
     <div class="form-group">
+      <label for="username">Username</label>
+      <input type="text" class="form-control" id="username" placeholder="enter username" [(ngModel)]="user.username" name="username" required>
+    </div>
+    <div class="form-group">
       <label for="email">Email</label>
       <input type="text" class="form-control" id="email" placeholder="enter email" [(ngModel)]="user.email" name="email" required>
     </div>
