--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,10 +11,14 @@
     <div id="navbar" class="navbar-collapse collapse" [collapse]="isCollapsed">
       <ul class="nav navbar-nav">
         <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
-        <li><a routerLink="/about" routerLinkActive="active">About</a></li>
-        <li><a routerLink="/status" (clicked)="statusClicked()" routerLinkActive="active">Status</a></li>
+        <li *ngIf="isLoggedIn"><a routerLink="/status" (clicked)="statusClicked()" routerLinkActive="active">Status</a></li>
+        <li *ngIf="isAdmin"><a routerLink="/admin" routerLinkActive="active">Admin Portal</a></li>
       </ul>
-      <ul class="nav navbar-nav navbar-right"></ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li *ngIf="isLoggedIn"><a routerLink="/logout" routerLinkActive="active" (clicked)="logoutClicked()">Logout</a></li>
+        <li *ngIf="!isLoggedIn"><a routerLink="/login" routerLinkActive="active">Login</a></li>
+        <li *ngIf="!isLoggedIn"><a routerLink="/register" routerLinkActive="register">Register</a></li>
+      </ul>
     </div>
   </div>
 </nav>
