--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,8 +1,41 @@
 <tabset>
+  <ng-template #addUserTemplate>
+    <div id="addEmployeeModal">
+      <div>
+          <form name="newUserForm" (ngSubmit)="onCreateNewUser()">
+            <div class="modal-header">
+              <h4 class="modal-title pull-left">Add User</h4>
+              <button type="button" class="close pull-right" aria-label="Close" (click)="modal.closeModal()">&times;</button>
+            </div>
+            <div class="modal-body">
+              <div class="form-group">
+                <label>Username</label>
+                <input type="text" class="form-control" [(ngModel)]="newUser.username" name="username" required>
+              </div>
+              <div class="form-group">
+                <label>Email</label>
+                <input type="email" class="form-control" [(ngModel)]="newUser.email" name="email" required>
+              </div>
+              <div class="form-group">
+                <label>Password</label>
+                <input type="password" class="form-control" [(ngModel)]="newUser.password" name="password" required>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <input type="button" class="btn btn-default" data-dismiss="modal" (click)="modal.closeModal()" value="Cancel">
+              <input type="submit" class="btn btn-success" value="Add">
+            </div>
+          </form>
+      </div>
+    </div>
+  </ng-template>
   <tab heading='User Management'>
   	<!-- <ul *ngFor="let user of users">
   		<li>{{user.username}}</li>
   	</ul> -->
+    <div class="col-md-6">
+      <button type="button" class="btn btn-success" (click)="addNewUserClicked(addUserTemplate)"><i class="fa fa-plus" aria-hidden="true"></i> Add User</button>
+    </div>
   	<table class="table table-striped table-hover">
       <thead>
         <tr>
@@ -23,12 +56,13 @@
           <!--<a href="#" class="settings" title="Settings" data-toggle="tooltip"><i class="material-icons">&#xE8B8;</i></a>-->
           <!--<a (clicked)="deleteUserClicked()" class="settings" title="Settings" data-toggle="tooltip"><i class="fa fa-cog" aria-hidden="true"></i></a>-->
           <!--<a (clicked)="deleteUserClicked()" class="delete" title="Delete" data-toggle="tooltip"><i class="fa fa-trash" aria-hidden="true"></i></a>-->
-          <i (click)="settingsUserClicked()" class="fa fa-cog settings" aria-hidden="true"></i>
-          <i (click)="deleteUserClicked(template)" class="fa fa-trash delete" aria-hidden="true"></i>
+          <!--<i (click)="settingsUserClicked(addUserTemplate)" class="fa fa-cog settings" aria-hidden="true"></i>-->
+          <i class="fa fa-cog settings" aria-hidden="true"></i>
+          <i (click)="deleteUserClicked(deleteTemplate)" class="fa fa-trash delete" aria-hidden="true"></i>
           <br><br>
-          <ng-template #template>
+          <ng-template #deleteTemplate>
             <div class="modal-header">
-              <h4 class="modal-title pull-left">Modal</h4>
+              <h4 class="modal-title pull-left">Delete User</h4>
               <button type="button" class="close pull-right" aria-label="Close" (click)="modal.closeModal()">
                 <span aria-hidden="true">&times;</span>
               </button>
